--- a/contact.html
+++ b/contact.html
@@ -228,14 +228,12 @@
   
             </div>
             <div class="contact">
-              <address class="mt-4 m-0 text-dark mb-1"><i class="bi bi-pin-map fw-semibold"></i> New South Block , Phase
-                8B , 160055</address>
-              <a href="tel:+" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
-                  class="bi bi-telephone"></i> 909090XXXX</a>
-              <a href="mailto:" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
-                  class="bi bi-envelope"></i> xyzdemomail@gmail.com</a>
-              <a href="" class="text-dark text-decoration-none fw-semibold"><i class="bi bi-skype"></i> xyzdemomail</a>
-            </div>
+            <address class="mt-4 m-0 text-dark mb-1"><i class="bi bi-pin-map fw-semibold"></i>Rz-179/5, Street Number 04 Durga Park, New Delhi, 110045</address>
+            <a href="tel:+" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
+                class="bi bi-telephone"></i>+91 99999 40443</a>
+            <a href="mailto:" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
+                class="bi bi-envelope"></i>lakshaybharti@gmail.com</a>
+          </div>
           </div>
         </div>
       </div>
