--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
       <div class="text">
         <div class="display-1 main-heading gradient revealY ">
-          Luxery Properties
+          Luxury Properties
         </div>
         <div class="display-3 sub-heading revealY">
           Near Dwarka Expressway
