--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
 </head>
 
 <body>
+  <div class="modal fade d-flex align-items-center justify-content-center" id="popupAdModal" tabindex="-1" aria-labelledby="popupAdModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title display-5 fw-medium gradient" id="popupAdModalLabel">Special Deal!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="text-center">
+            <h4>Smart World Sector 69 Gurgaon</h4>
+            <p>An Architectural Wonder Based on Marina Bay Sands</p>
+            <img src="./assests/images/smartworldgurgaonsector69.jpg" alt="Ad Image" class="img-fluid">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <div class="modal-button">
+            <button type="" class="btn  text-light"  data-bs-toggle="modal" data-bs-target="#formModal">Get In Touch</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
  <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
