--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div class="modal fade d-flex align-items-center justify-content-center" id="popupAdModal" tabindex="-1" aria-labelledby="popupAdModalLabel" aria-hidden="true">
+  <div class="modal deal fade d-flex align-items-center justify-content-center" id="popupAdModal" tabindex="-1" aria-labelledby="popupAdModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
