--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
     <section class="main-contact">
         <div class="main-contact-wrapper py-5 d-flex align-items-center flex-column w-100 justify-content-center">
             <div class="main-contact-heading text-center w-100">
-                <div class="container-fluid d-flex align-items-center justify-content-center p-0">
+                <div class="container-fluid py-5 d-flex align-items-center justify-content-center p-0">
                     <div class="line-left w-50"></div>
                     <div class="heading display-4 text-center fw-semibold d-flex align-items-center">
                         <span class="display-6">**</span>
