--- a/contact.html
+++ b/contact.html
@@ -247,6 +247,57 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="./assests/script/app.js"></script>
+    <script>
+      function reveal() {
+  var reveals = document.querySelectorAll(".reveal");
+
+  for (var i = 0; i < reveals.length; i++) {
+      var windowHeight = window.innerHeight;
+      var elementTop = reveals[i].getBoundingClientRect().top;
+      var elementVisible = 200;
+
+      if (elementTop < windowHeight - elementVisible) {
+          reveals[i].classList.add("active");
+      } else {
+          reveals[i].classList.remove("active");
+      }
+  }
+}
+function revealY() {
+  var reveals = document.querySelectorAll(".revealY");
+  for (var i = 0; i < reveals.length; i++) {
+      var windowHeight = window.innerHeight;
+      var elementTop = reveals[i].getBoundingClientRect().top;
+      var elementVisible = 200;
+
+      if (elementTop < windowHeight - elementVisible) {
+          reveals[i].classList.add("activeY");
+      } else {
+          reveals[i].classList.remove("activeY");
+      }
+  }
+}
+
+
+function revealZ() {
+  var reveals = document.querySelectorAll(".revealZ");
+  for (var i = 0; i < reveals.length; i++) {
+      var windowHeight = window.innerHeight;
+      var elementTop = reveals[i].getBoundingClientRect().top;
+      var elementVisible =200;
+
+      if (elementTop < windowHeight - elementVisible) {
+          reveals[i].classList.add("activeZ");
+      } else {
+          reveals[i].classList.remove("activeZ");
+      }
+  }
+}
+
+window.addEventListener("scroll", revealY);
+window.addEventListener("scroll", revealZ);
+window.addEventListener("scroll", reveal);
+    </script>
 </body>
 
 </html>
