--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
               <div class="heading display-4 text-center fw-semibold gradient">Our Mission</div>
               <div class="line-left"></div>
             </div>
-            <div class="container-fluid contact-container ">
+            <div class="container-fluid mt-5 contact-container ">
                 <div class="svg-container revealY">
                     <svg id="sw-js-blob-svg" class="shape" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                       <defs>
