--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             <a href="tel:+" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
                 class="bi bi-telephone"></i>+91 99999 40443</a>
             <a href="mailto:" class="text-dark mb-1 text-decoration-none d-block fw-semibold"><i
-                class="bi bi-envelope"></i>lakshaybharti@gmail.com</a>
+                class="bi bi-envelope"></i>investyardrealty@gmail.com</a>
           </div>
         </div>
       </div>
