--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev left" type="button" data-bs-target="#carouselExampleInterval"
+<!--         <button class="carousel-control-prev left" type="button" data-bs-target="#carouselExampleInterval"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -185,7 +185,7 @@
           data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> -->
       </div>
     </div>
   </header>
