--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         <div class="modal-body">
           <div class="text-center">
-            <h4>Smart World Sector 69 Gurgaon</h4>
-            <p>An Architectural Wonder Based on Marina Bay Sands</p>
-            <img src="./assests/images/smartworldgurgaonsector69.jpg" alt="Ad Image" class="img-fluid">
+            <h4>MVM Mall, Gurugram</h4>
+            <p>Feast Avenue, Coming soon at Dwarka Expressway</p>
+            <img src="./assests/images/Creatives for website_page-0001.jpg" alt="Ad Image" class="img-fluid">
           </div>
         </div>
         <div class="modal-footer">
