--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     rel="stylesheet">
     <link rel="shortcut icon" href="./assests/images/logo.png" type="image/x-icon">
   <title>Welcome to InvestYardRealty</title>
+  <meta name="google-site-verification" content="8PB7vlCIgiORxVnnJ5oBJhOWPRRMHQTG4u48m-eKUC4" />
 </head>
 
 <body>
